# slice

./: .env.example  .gitignore  README.md  package.json
adapters/claude/: SKILL.template.md
adapters/codex/: AGENTS.template.md
adapters/gemini/: gemini-extension.template.json
docs/: PLUGIN_LIFECYCLE.md  SLICE_RUNTIME_MASTER_PLAN.md
src/: cli.mjs
templates/connectors/gmail/: connector.json
templates/connectors/gmail/files/.slice/plugins/google-workspace/: PLUGIN.md  connector.json  mcp.json.example
templates/connectors/gmail/files/.slice/plugins/google-workspace/tools/google_workspace_mcp/: README.md  pyproject.toml
templates/connectors/gmail/files/.slice/plugins/google-workspace/tools/google_workspace_mcp/google_workspace_mcp/: __init__.py  auth.py  common.py  server.py
templates/connectors/gmail/prompts/: install.md  use.md
templates/repo/.life/plugins/: identity.md
templates/repo/.slice/plugins/: todo.md
test/: cli.test.mjs
